# LibPAK

./: .gitignore  CMakeLists.txt  Structure
PAK/: CMakeLists.txt  pak.cpp
include/: Definitions.h  LibPAK.h
run/test/: b.txt
src/: LibPAK.c
test/: Test.c
